# compacto

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
compacto/: Cargo.toml
compacto-cli/: Cargo.toml
compacto-cli/src/: cli.rs  main.rs
compacto/examples/: compress.rs  decompress.rs
compacto/src/: compress.rs  decompress.rs  error.rs  lib.rs
samples/test-samples/: input.json  output.json
