[package]
name = "compacto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130"}
serde_json = {version = "1.0.59", default-features = false, features = ["alloc"]}
seahash = "4.1.0"