[package]
name = "compacto"
version = "1.0.0"
edition = "2021"
authors = ["Eduardo Stuart <e@s.tuart.me>"]
readme = "../README.md"
homepage = "https://github.com/eduardostuart/compacto"
repository = "https://github.com/eduardostuart/compacto.git"
description = "A fast way to compress & decompress JSON"
license = "MIT"
documentation = "https://docs.rs/compacto"
keywords = ["json", "compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130"}
serde_json = {version = "1.0.59", default-features = false, features = ["alloc"]}
seahash = "4.1.0"